# wastrumentation

./: Cargo.toml  check_this.wat  instrumented.txt  instrumented.wasm  instrumented.wat  instrumented_2.txt  instrumented_2.wasm  instrumented_2.wat  original.txt  original.wasm  original.wat  testing_2.wat  testing_3.wat  testoutput.txt  testoutput.wasm  testoutput.wat  testoutput_2.txt  testoutput_2.wasm
charles-instument/: Cargo.toml  instrumented.wasm  instrumented.wat
charles-instument/src/: input.rs  lib.rs
transform/src/: main.rs  testoutput.txt
wastrumentation/: Cargo.toml
wastrumentation-instr-lib/: .lldbinit  Cargo.toml  instrumented_input.wasm  instrumented_input.wat
wastrumentation-instr-lib/tests/: integration_tests.rs
wastrumentation-instr-lib/tests/analyses/rust/logging/src/: lib.rs
wastrumentation-instr-lib/tests/analyses/rust/my-logger/: Cargo.toml
wastrumentation-instr-lib/tests/analyses/rust/my-logger/src/: lib.rs
wastrumentation-instr-lib/tests/analyses/rust/wastrumentation-rs-stdlib/src/: lib.rs
wastrumentation-static-analysis/: Cargo.toml
wastrumentation/src/: lib.rs
wastrumentation/src/analysis/: mod.rs
wastrumentation/src/instrument/: function_application.rs  memory.rs  mod.rs
